--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /*--------------------------------------------Colors*/
+
 .bg-color-name-title {
     background-color: #676767;
 }
 
 /*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
 
-.heading {}
+.heading {
+    margin-left: 50px;
+}
 
 .logo {
-    background: url(../images/rosie.jpg);
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
